adding seph to authors, anonymousbasehandler now being found by in_typemapper even if not explicitly ref'ed by metaclass

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -8,4 +8,4 @@ Travis Jensen provided a fix for #24
 Benoit Chesneau provided some mimetype helpers
 Adam Lowry fixed a bug with the callmap construct
 Benjamin Pollack provided an ez_setup fix and more
-
+Seph Soliman for fixing a bug with AnonymousBaseHandler
