--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,7 +1,7 @@
 django-piston was originally written by Jesper Noehr, but since
 its release, many people have contributed invaluable feedback and patches:
 
-Alberto Donacko provided a fix for #26
+Alberto Donacko provided a fix for #26, contributed #35, #37 and #38
 Matthew Marshall provided fixes for #25 and #24
 Pete Karl reported #20
 Travis Jensen provided a fix for #24
