--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -11,3 +11,4 @@ Benjamin Pollack provided an ez_setup fix and more
 Seph Soliman for fixing a bug with AnonymousBaseHandler
 David Larlet for suggesting several improvements
 Xavier Barbosa for improving QuerySet handling and providing Template URI code
+Michael Richardson for contributing an improvement to form validation handling
