--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -12,3 +12,4 @@ Seph Soliman for fixing a bug with AnonymousBaseHandler
 David Larlet for suggesting several improvements
 Xavier Barbosa for improving QuerySet handling and providing Template URI code
 Michael Richardson for contributing an improvement to form validation handling
+Brian McMurray for contributing a patch for #41
