--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -14,3 +14,4 @@ Xavier Barbosa for improving QuerySet handling and providing Template URI code
 Michael Richardson for contributing an improvement to form validation handling
 Brian McMurray for contributing a patch for #41
 James Emerton for making the OAuth parts more usable/friendly
+Anton Tsigularov for providing a patch for incorrect multipart detection
