--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -22,3 +22,4 @@ Taavi Taijala for alarming us to the dangers of arbitrary unpickling
 Joe Stump for testing and contributing the OAuth bits
 Mike Malone for giving a presentation on Piston, and fixing our throttler :-)
 Didier Deshommes for contributing a fix for #58
+Alexander Ljungberg for fixing a bug in the default behavior of `update`
